--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-vertical-timeline-component": "^3.5.2",
+    "smoothscroll-polyfill": "^0.4.4",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4",
     "webfontloader": "^1.6.28"
