--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.0",
     "react-vertical-timeline-component": "^3.5.2",
     "smoothscroll-polyfill": "^0.4.4",
+    "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4",
     "webfontloader": "^1.6.28"
