--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-vertical-timeline-component": "^3.5.2",
+    "reactive-button": "^1.3.8",
     "smoothscroll-polyfill": "^0.4.4",
     "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
