--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-tooltip": "^4.2.21",
     "react-vertical-timeline-component": "^3.5.2",
     "reactive-button": "^1.3.8",
     "smoothscroll-polyfill": "^0.4.4",
