--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "date-fns-tz": "^1.3.0",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
