--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-plugin-macros": "^3.1.0",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.0",
+    "party-js": "^2.2.0",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-device-detect": "^2.1.2",
