--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "my-wedding-card",
-  "name": "My Wedding Card",
+  "short_name": "Boda - Caro & Ger",
+  "name": "Boda - Caro & Ger",
   "icons": [
     {
       "src": "favicon.ico",
