--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_WS_SERVER_URL=http://192.168.0.33:3001
+REACT_APP_GOOGLE_API_KEY=AIzaSyBHEo7fbmEVD75bQ8o4iYEJsIGCNTQO8mo
+REACT_APP_GOOGLE_DRIVE_ROOT_ID=1hdTfxpPEppaY577vz8RRPg0U2CncV_fZ
